--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 	<link rel="stylesheet" href="css/custom.css">
 </head>
 <body>
-	<p>Este es un parrafo</p>
-	<p>Este es otro parrafo</p>
+	<div class="container">
+		<h2>Este es un titulo</h2>
+		<h4>Este es un subtitulo</h4>
+	</div>
 </body>
 </html>
