--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<h1>Super titulo</h1>
 		<h2>Este es un titulo</h2>
 		<h4>Este es un subtitulo</h4>
+		<p>Agrego parrafo</p>
 	</div>
 </body>
 </html>
