Otro parrafo a master

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<div class="container">
 		<h2>Este es un titulo</h2>
 		<h4>Este es un subtitulo</h4>
+		<p>Este es ortro parrafo de master</p>
 	</div>
 </body>
 </html>
