--- a/index.html
+++ b/index.html
@@ -11,11 +11,8 @@
 		<h1>Super titulo</h1>
 		<h2>Este es un titulo</h2>
 		<h4>Este es un subtitulo</h4>
-<<<<<<< HEAD
 		<p>Este es ortro parrafo de master</p>
-=======
-		<p>Agrego parrafo</p>
->>>>>>> cabecera
+		<p>Agrego parrafo</p>q
 	</div>
 </body>
 </html>
